istio-test/istio-network-with-condiction.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
  #- web-svc.default.svc.cluster.local
  - web-svc
  http:
  - match:
    - headers:
        end-user:
          exact: sunday 
      #uri:
      #  prefix: /index.html
      #ignoreUriCase: true
    # 满足此条件走tomcat-svc,不满足走httpd-svc
    route:
    - destination:
        host: tomcat-svc

  - route:
    - destination:
        host: httpd-svc
